fixed the signup button by adding wrap

--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,7 @@ a{
 }
 
 .signup-inside-box{
+    flex-wrap: wrap;
     max-width: 1200px;
     width: 100%;
     display: flex;
@@ -247,7 +248,7 @@ a{
 }
 
 .signup-box-blue{
- 
+ flex-wrap: wrap;
  margin: 0 70px;
  padding: 50px 80px ;
  background-color: #3882F6;
@@ -257,6 +258,7 @@ a{
 }
 
 .signup-button-down{
+    margin-top: 20px;
     border: solid white;
     border-width: 1px;
      background-color: #3882F6;
@@ -266,12 +268,9 @@ a{
     
 }
 
-.signup-hp{
-    
 
-}
 .signup-heading{
-     
+     min-width: 200px;
      color: #F9FAF8;
      font-size: x-large;
      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
